data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000247_db6f9748-b2b2-4ecb-b9d7-bd5f503052e7.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: db6f9748-b2b2-4ecb-b9d7-bd5f503052e7
- repo: scikit-learn/scikit-learn
- instance_id: scikit-learn__scikit-learn-14894
- base_commit: fdbaa58acbead5a254f2e6d597dc1ab3b947f4c6
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
ZeroDivisionError in _sparse_fit for SVM with empty support_vectors_
#### Description
When using sparse data, in the case where the support_vectors_ attribute is be empty, _fit_sparse gives a ZeroDivisionError

#### Steps/Code to Reproduce
```
import numpy as np
import scipy
import sklearn
from sklearn.svm import SVR
x_train = np.array([[0, 1, 0, 0],
[0, 0, 0, 1],
[0, 0, 1, 0],
[0, 0, 0, 1]])
y_train = np.array([0.04, 0.04, 0.10, 0.16])
model = SVR(C=316.227766017, cache_size=200, coef0=0.0, degree=3, epsilon=0.1,
          gamma=1.0, kernel='linear', max_iter=15000,
          shrinking=True, tol=0.001, verbose=False)
# dense x_train has no error
model.fit(x_train, y_train)

# convert to sparse
xtrain= scipy.sparse.csr_matrix(x_train)
model.fit(xtrain, y_train)

```
#### Expected Results
No error is thrown and  `self.dual_coef_ = sp.csr_matrix([])`

#### Actual Results
```
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/lib/python3.5/dist-packages/sklearn/svm/base.py", line 209, in fit
    fit(X, y, sample_weight, solver_type, kernel, random_seed=seed)
  File "/usr/local/lib/python3.5/dist-packages/sklearn/svm/base.py", line 302, in _sparse_fit
    dual_coef_indices.size / n_class)
ZeroDivisionError: float division by zero
```

#### Versions
```
>>> sklearn.show_versions()

System:
executable: /usr/bin/python3
    python: 3.5.2 (default, Nov 12 2018, 13:43:14)  [GCC 5.4.0 20160609]
   machine: Linux-4.15.0-58-generic-x86_64-with-Ubuntu-16.04-xenial

Python deps:
     numpy: 1.17.0
    Cython: None
       pip: 19.2.1
    pandas: 0.22.0
   sklearn: 0.21.3
     scipy: 1.3.0
setuptools: 40.4.3
```

FILES INSPECTED
---------------
- sklearn/svm/base.py [Read: 1]
- sklearn/linear_model [Grep: 1]

SEARCH ANCHORS
--------------
- [2] Glob path='testbed' glob='**/svm/base.py'
- [19] Grep pattern='np\\.finfo\\(np\\.float\\)' path='sklearn/linear_model'
- [26] Glob path='testbed' glob='**/test_svm.py'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [diagnostic] find ./swebench_9_15/testbed -type f -name "base.py" | grep svm
- [other/reproduction] sleep 30
- [test] python test_issue.py
- [test] python test_issue.py
- [other/reproduction] python --version && which python
- [test] python3 test_issue.py
- [test] cd testbed && python3 test_fix.py
- [diagnostic] find testbed -name "test_svm.py" -type f

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):
- ImportError: No module named scipy

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Glob Result after action #2]
  ./swebench_9_15/testbed/sklearn/svm/base.py
- [Read Result after action #4]
       1→import numpy as np
       2→import scipy.sparse as sp
       3→import warnings
       4→from abc import ABCMeta, abstractmethod
       5→
       6→from . import libsvm, liblinear
       7→from . import libsvm_sparse
       8→from ..base import BaseEstimator, ClassifierMixin
       9→from ..preprocessing import LabelEncoder
      10→from ..utils.multiclass import _ovr_decision_function
      11→from ..utils import check_array, check_random_state
      12→from ..utils import column_or_1d, check_X_y
      13→from ..utils import compute_class_weight
      14→from ..utils.extmath import safe_sparse_dot
      15→from ..utils.validation import check_is_fitted, _check_large_sparse
      16→from ..utils.validation import _check_sample_weight
      17→from ..utils.multiclass import check_classification_targets
      18→from ..exceptions import ConvergenceWarning
      19→from ..exceptions import NotFittedError
      20→
      21→
      22→LIBSVM_IMPL = ['c_svc', 'nu_svc', 'one_class', 'epsilon_svr', 'nu_svr']
      23→
      24→
      25→def _one_vs_one_coef(dual_coef, n_support, support_vectors):
      26→    """Generate primal coefficients from dual coefficients
      27→    for the one-vs-one multi class LibSVM in the case
      28→
  [... truncated ...]
- [Test Output after action #11]
  Exit code 1
    File "test_issue.py", line 6
      print(f"sklearn version: {sklearn.__version__}")
                                                    ^
  SyntaxError: invalid syntax
- [Test Output after action #13]
  Exit code 1
  Traceback (most recent call last):
    File "test_issue.py", line 2, in <module>
      import scipy
  ImportError: No module named scipy
- [Test Output after action #17]
  Exit code 1
  ./swebench_9_15/testbed/sklearn/utils/multiclass.py:13: DeprecationWarning: Please use `spmatrix` from the `scipy.sparse` namespace, the `scipy.sparse.base` namespace is deprecated.
    from scipy.sparse.base import spmatrix
  Traceback (most recent call last):
    File "test_issue.py", line 4, in <module>
      from sklearn.svm import SVR
    File "./swebench_9_15/testbed/sklearn/svm/__init__.py", line 13, in <module>
      from .classes import SVC, NuSVC, SVR, NuSVR, OneClassSVM, LinearSVC, \
    File "./swebench_9_15/testbed/sklearn/svm/classes.py", line 6, in <module>
      from ..linear_model.base import LinearClassifierMixin, SparseCoefMixin, \
    File "./swebench_9_15/testbed/sklearn/linear_model/__init__.py", line 15, in <module>
      from .least_angle import (Lars, LassoLars, lars_path, lars_path_gram, LarsCV,
    File "./swebench_9_15/testbed/sklearn/linear_model/least_angle.py", line 30, in <module>
      method='lar', copy_X=True, eps=np.finfo(np.float).eps,
    File "/opt/anaconda3/lib/python3.8/site-packages/numpy/__init__.py", line 305, in __getattr__
      raise AttributeError(__former_attrs__[attr])
  AttributeError: module 'numpy' has no attribute 'float'.
  `np.float` was a deprec
  [... truncated ...]
- [Grep Result after action #19]
  testbed/sklearn/linear_model/least_angle.py:30:              method='lar', copy_X=True, eps=np.finfo(np.float).eps,
  testbed/sklearn/linear_model/least_angle.py:92:        systems. By default, ``np.finfo(np.float).eps`` is used.
  testbed/sklearn/linear_model/least_angle.py:169:                   method='lar', copy_X=True, eps=np.finfo(np.float).eps,
  testbed/sklearn/linear_model/least_angle.py:211:        systems. By default, ``np.finfo(np.float).eps`` is used.
  testbed/sklearn/linear_model/least_angle.py:286:                      eps=np.finfo(np.float).eps, copy_Gram=True, verbose=0,
  testbed/sklearn/linear_model/least_angle.py:339:        systems. By default, ``np.finfo(np.float).eps`` is used
  testbed/sklearn/linear_model/least_angle.py:801:        By default, ``np.finfo(np.float).eps`` is used.
  testbed/sklearn/linear_model/least_angle.py:858:                 eps=np.finfo(np.float).eps, copy_X=True, fit_path=True):
  testbed/sklearn/linear_model/least_angle.py:1022:        By default, ``np.finfo(np.float).eps`` is used.
  testbed/sklearn/linear_model/least_angle.py:1094:                 eps=np.finfo(np.float).eps, copy_X=True, fit_path=True,
  testbed/sklearn/linear_model/least_angle.py:112
  [... truncated ...]
- [Test Output after action #24]
  Testing empty sparse matrix creation...
  Created empty sparse matrix with shape: (1, 0)
  Expected shape: (1, 0)
  Created empty sparse matrix with shape: (1, 0)
  Expected shape: (1, 0)
  Created non-empty sparse matrix with shape: (1, 5)
  Expected shape: (1, 5)

  All tests passed!
- [Glob Result after action #26]
  <tool_use_error>Directory does not exist: testbed</tool_use_error>

SOURCE EDIT EVIDENCE
--------------------
- sklearn/svm/base.py
  Tool: Edit action #21
  old_text_sha256: 1a30791409b5739915ebeacce1ff65c619ef9a6cb38ffe5edecb14a591560960
  new_text_sha256: 0f03303e9037f8f0400c8f816bbd33de87d9979dcda4558df6a92309bdb43607
- sklearn/svm/base.py
  Tool: Edit action #22
  old_text_sha256: 79cd8d1e6479899ad3eb1c9e09a24dc1d5c018e6a462c6bee9fe6d6df140e3dc
  new_text_sha256: d12315d275a564c64a19ddcb71082df177673be2e4d8c7f865047b136f2015c4
- test_fix.py
  Tool: Write action #23
  new_text_sha256: 8b8470401176b9e0c42762b50fcce6cf78b46ed88750762875b00441b716c3a8

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
